plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = mod_version
group = mod_group_id

base { archivesName = 'TacticalLoot' }
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

sourceSets {
    gameTest {
        java.srcDir 'src/gametest/java'
        resources.srcDir 'src/gametest/resources'
        compileClasspath += sourceSets.main.output + configurations.testCompileClasspath
        runtimeClasspath += output + compileClasspath
    }
}

configurations {
    gameTestImplementation.extendsFrom implementation
    gameTestRuntimeOnly.extendsFrom runtimeOnly
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'info'
            mods {
                tactical_pickup {
                    source sourceSets.main
                    source sourceSets.gameTest
                }
            }
        }
        client {}
        server { args '--nogui' }
        gameTestServer { property 'forge.enabledGameTestNamespaces', mod_id }
        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }
repositories { mavenCentral() }

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test).configure { useJUnitPlatform() }

tasks.register('syncGameTestStructures', Copy) {
    from 'gameteststructures'
    into 'run/gameteststructures'
}

tasks.matching { it.name == 'runGameTestServer' }.configureEach {
    dependsOn tasks.named('syncGameTestStructures')
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
        forge_version: forge_version, forge_version_range: forge_version_range,
        loader_version_range: loader_version_range, mod_id: mod_id, mod_name: mod_name,
        mod_license: mod_license, mod_version: mod_version, mod_authors: mod_authors,
        mod_description: mod_description]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) { expand replaceProperties }
}

tasks.named('jar', Jar).configure {
    archiveFileName = "TacticalLoot-${mod_version}-forge-${minecraft_version}.jar"
    from('LICENSE') { rename { 'LICENSE_TacticalLoot' } }
    manifest {
        attributes(['Specification-Title': mod_id, 'Specification-Vendor': mod_authors,
            'Specification-Version': '1', 'Implementation-Title': mod_name,
            'Implementation-Version': mod_version, 'Implementation-Vendor': mod_authors])
    }
    finalizedBy 'reobfJar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 17
}

tasks.withType(JavaExec).configureEach {
    standardInput = System.in
}

java { withSourcesJar() }
